--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -24,7 +24,7 @@ psycopg2==2.9.6
 pyasn1==0.5.0
 pycparser==2.21
 pydantic==1.10.8
-python-dotenv==1.0.0
+python-dotenv
 python-jose==3.3.0
 python-multipart==0.0.6
 PyYAML==6.0
